# scribegate

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  Scribegate.slnx  UBIQUITOUS_LANGUAGE.md  coverage-thresholds.json  coverage.json  docker-compose.yml  mkdocs.yml  renovate.json
.claude/agents/: sg-bug.md  sg-design.md  sg-docs.md  sg-feature.md  sg-orchestrator.md  sg-security.md
.claude/commands/: sg-endpoint.md  sg-migration.md  sg-milestone-status.md  sg-prime.md  sg-security-review.md  sg-ui.md
.github/workflows/: ci.yml  docs.yml  release.yml
clients/csharp/: Scribegate.Client.csproj
clients/python/: pyproject.toml
clients/typescript/: package.json
docs/: CNAME  api.md  architecture-friction.md  architecture.md  contributing.md  design-decisions.md  getting-started.md  index.md  markdown.md  security.md  self-hosting.md  spec.md  testing.md
docs/legal/: acceptable-use.md  imprint.md  privacy.md  takedown.md  terms.md
scripts/: build-coverage-badge.mjs  check-coverage.mjs  generate-clients.sh
src/Scribegate.Analyzers/: AnalyzerReleases.Unshipped.md  DbContextOutsideDataAnalyzer.cs  Scribegate.Analyzers.csproj
src/Scribegate.Cli/: ApiClient.cs  CliConfig.cs  OutputFormatter.cs  Program.cs  README.md  Scribegate.Cli.csproj
src/Scribegate.Core/: AllowsDbContextAttribute.cs  TierLimits.cs
src/Scribegate.Data/: DependencyInjection.cs  Scribegate.Data.csproj  ScribegateDbContext.cs
src/Scribegate.Web/: Program.cs  (+2 more)
tests/: Directory.Build.props
(+486 files in other folders)
