[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scribegate"
version = "0.1.0"
description = "Python client for the Scribegate API"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]
license = "MIT"

[project.urls]
Repository = "https://github.com/stevehansen/scribegate"

[tool.setuptools.packages.find]
where = ["src"]
